<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/layout_item_bg">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_material"
                android:clickable="true"
                android:orientation="horizontal"
                android:paddingRight="@dimen/space_16">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/space_4"
                    android:text="@string/avatar"
                    android:textColor="?attr/infoTextColor"
                    android:textSize="@dimen/text_size_16"
                    android:padding="@dimen/space_16"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <net.translives.app.widget.PortraitView
                    android:id="@+id/iv_avatar"
                    style="@style/UserFaceImageStyle"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center_vertical"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="2dp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/ly_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_material"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="@dimen/space_16">

                <TextView
                    android:id="@+id/iv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/space_4"
                    android:text="@string/nickname"
                    android:textColor="?attr/infoTextColor"
                    android:textSize="@dimen/text_size_16" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/textColor"
                    android:textSize="@dimen/text_size_16" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ly_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_material"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="@dimen/space_16">

                <TextView
                    android:id="@+id/iv_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/space_4"
                    android:text="@string/gender"
                    android:textColor="?attr/infoTextColor"
                    android:textSize="@dimen/text_size_16" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tv_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/textColor"
                    android:textSize="@dimen/text_size_16" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_material"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="@dimen/space_16">

                <TextView
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/space_4"
                    android:text="@string/join_time"
                    android:textColor="?attr/infoTextColor"
                    android:textSize="@dimen/text_size_16" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tv_join_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/infoTextColor"
                    android:textSize="@dimen/text_size_16" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_material"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="@dimen/space_16">

                <TextView
                    android:id="@id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/space_4"
                    android:text="@string/location"
                    android:textColor="?attr/infoTextColor"
                    android:textSize="@dimen/text_size_16" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/infoTextColor"
                    android:textSize="@dimen/text_size_16" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/ly_suffix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_material"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="@dimen/space_16">

                <TextView
                    android:id="@+id/iv_suffix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/space_4"
                    android:text="@string/suffix"
                    android:textColor="?attr/infoTextColor"
                    android:textSize="@dimen/text_size_16" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tv_suffix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/textColor"
                    android:textSize="@dimen/text_size_16" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <net.translives.app.ui.empty.EmptyLayout
        android:id="@+id/error_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible" />
</FrameLayout>