<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


    <LinearLayout
            android:id="@+id/lay_login_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/bg_login"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <include
                android:id="@+id/ly_retrieve_bar"
                layout="@layout/activity_main_login_navigation_bar" />

            <ImageView
                android:id="@+id/iv_login_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@null"
                android:paddingTop="48dp"
                android:scaleType="centerInside"
                app:srcCompat="@mipmap/logo_osc" />

            <LinearLayout
                android:id="@+id/ll_login_username"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/bg_login_input_ok"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_login_username"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:ems="15"
                    android:focusable="true"
                    android:hint="@string/login_input_username_hint"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:minLines="1"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/login_line_color"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/font_16" />

                <ImageView
                    android:id="@+id/iv_login_username_del"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:contentDescription="@null"
                    android:scaleType="fitCenter"
                    android:visibility="gone"
                    app:srcCompat="@mipmap/ic_clear" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_login_pwd"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_login_input_ok"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_login_pwd"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:minLines="1"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/login_line_color"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/font_16" />

                <ImageView
                    android:id="@+id/iv_login_pwd_del"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:contentDescription="@null"
                    android:scaleType="fitCenter"
                    android:visibility="gone"
                    app:srcCompat="@mipmap/ic_clear" />

            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/bt_login_submit"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/bg_login_submit"
                    android:elevation="0dp"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_18"
                    tools:targetApi="lollipop" />

                <TextView
                    android:id="@+id/bt_login_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_below="@+id/bt_login_submit"
                    android:layout_alignParentStart="true"
                    android:text="@string/login_register_hint"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_18" />

                <TextView
                    android:id="@+id/bt_login_forgotpass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_below="@+id/bt_login_submit"
                    android:layout_alignParentEnd="true"
                    android:text="@string/login_forget_hint"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_18" />
            </RelativeLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/lay_12"
            android:gravity="center"
            android:text="@string/login_other_hint"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/ll_login_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:visibility="visible">

            <ImageView
                android:id="@+id/ib_login_weibo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="false"
                android:contentDescription="@null"
                android:cropToPadding="false"
                android:padding="8dp"
                android:scaleType="centerInside"
                android:src="@mipmap/ic_login_3party_weibo" />
            <!--
                        <ImageView
                            android:id="@+id/ib_login_wx"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:contentDescription="@null"
                            android:padding="8dp"
                            android:scaleType="centerInside"
                            android:src="@mipmap/ic_login_3party_wechat" />
            -->
            <ImageView
                android:id="@+id/ib_login_qq"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@null"
                android:padding="8dp"
                android:scaleType="centerInside"
                android:src="@mipmap/ic_login_3party_qq" />

        </LinearLayout>
    </LinearLayout>


</FrameLayout>